--- a/index.html
+++ b/index.html
@@ -1,26 +1,84 @@
 
-Course Resources Useful tools
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
-<!-- First link -->
-https://loremipsumgenerator.com/generator/?n=1&t=p Lorem ipsum generator
+    <style>
+        a:link{
+            color: red;
+        }
 
-<!-- Second link  -->
-https://micro-editor.github.io/ Micro: Terminal Text Editor HTML
+        a:visited{
+            color: green;
+        }
 
-<!-- First Link -->
-http://www.google.com/search?q=html%20is%20awesome Look for HTML
+        a:hover{
+            color: hotpink;
+        }
 
-<!-- Second link -->
-https://developer.mozilla.org/en-US/docs/Web/HTML MDN HTML portal
+        a:active{
+            color: blue;
+        }
+        
+    </style>
+</head>
 
-<!-- Third Link -->
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element MDN HTML element reference
 
-<!-- Fourth Link -->
-https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references HTML Entity reference table
 
-<!-- Fifth Link -->
-https://validator.w3.org/#validate_by_upload+with_options HTML validator
+<body>
+    <h1>Course Resources</h1> 
 
-<!-- Sixth Link -->
-https://developer.mozilla.org/en-US/docs/Learn MDN HTML Tutorial
+    <h2>Useful tools</h2> 
+
+    <ul>
+        <li>
+            <a href="https://loremipsumgenerator.com/generator/?n=1&t=p "> Lorem ipsum generator</a>
+        </li>
+
+        <li>
+            <a href="https://micro-editor.github.io/">Terminal Text Editor HTML</a>
+        </li>
+    </ul>
+    <br>
+
+    <h2>HTML</h2>
+
+    <ul>
+        <li>
+            <a href="http://www.google.com/search?q=html%20is%20awesome ">Look for HTML</a>
+        </li>
+
+        <li>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML ">MDN HTML portal</a>
+        </li>
+
+        <li>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Element MDN HTML</a>
+        </li>
+
+        <li>
+            <a href="https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references">HTML Entity reference</a>
+        </li>
+
+        <li>
+            <a href="https://validator.w3.org/#validate_by_upload+with_options">HTML validator</a>
+        </li>
+
+        <li>
+            <a href="https://developer.mozilla.org/en-US/docs/Learn">MDN HTML Tutorial</a>
+        </li>
+    </ul>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
